<resources>
    <string name="app_name">iOS Style Launcher</string>
    <string name="launcher_title_ready">Launcher setup ready</string>
    <string name="launcher_status_loading">Loading launcher data...</string>
    <string name="launcher_status_ready">MVP, Repository and DataBinding are connected.</string>
    <string name="launcher_setup_app_count">Installed launchable apps: %1$d</string>
    <string name="launcher_brand_title">LAUNCHER IOS</string>
    <string name="launcher_brand_subtitle">style launcher</string>
    <string name="settings_action_menu">Menu</string>
    <string name="settings_action_like">Like</string>
    <string name="settings_action_mail">Mail</string>
    <string name="settings_action_share">Share</string>
    <string name="settings_action_featured">Featured</string>
    <string name="share_app_chooser_title">Share app</string>
    <string name="share_mail_chooser_title">Share by mail</string>
    <string name="share_app_subject">iOS Style Launcher</string>
    <string name="share_app_text">Try iOS Style Launcher: https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="share_no_app_found">No app can handle this action.</string>
    <string name="rating_dialog_title">iOS Launcher</string>
    <string name="rating_dialog_message">Xin vui l&#242;ng &#273;&#225;nh gi&#225; 5 sao &#273;&#7875; h&#7895; tr&#7907; ph&#225;t tri&#7875;n. C&#7843;m &#417;n b&#7841;n r&#7845;t nhi&#7873;u!</string>
    <string name="rating_action_later">SAU</string>
    <string name="rating_action_no">KH&#212;NG</string>
    <string name="rating_action_send">G&#7916;I</string>
    <string name="settings_lock_screen">Màn hình khóa</string>
    <string name="settings_control_center">Trung tâm điều khiển</string>
    <string name="settings_assistive_touch">Công cụ hỗ trợ</string>
    <string name="settings_layout">Bố trí</string>
    <string name="settings_weather">Thời tiết</string>
    <string name="settings_liquid_glass">Liquid Glass</string>
    <string name="settings_blur_effect">Hiệu ứng mờ</string>
    <string name="settings_motion_wallpaper">Ảnh động</string>
    <string name="settings_wallpaper">Hình nền</string>
    <string name="settings_change_icon">Thay đổi biểu tượng</string>
    <string name="settings_rename">Đổi tên</string>
    <string name="settings_app_library">Thư viện ứng dụng</string>
    <string name="settings_hidden_apps">Ứng Dụng Ẩn</string>
    <string name="settings_hidden_apps_loading">Đang tải ứng dụng...</string>
    <string name="hidden_apps_section_hidden">ỨNG DỤNG ẨN</string>
    <string name="hidden_apps_section_apps">ỨNG DỤNG</string>
    <string name="settings_notifications">Thông báo</string>
    <string name="settings_rate_5_star">Đánh giá 5 sao</string>
    <string name="settings_more_apps">Tải khác của tôi dụng</string>
    <string name="feature_download_title">Tải về</string>
    <string name="lock_screen_download_message">Tải về Khóa màn hình và thông báo để sử dụng.</string>
    <string name="control_center_download_message">Tải về trung Tâm điều Khiển ứng dụng để sử dụng.</string>
    <string name="assistive_touch_download_message">Tải về Công Cụ Hỗ Trợ ứng dụng để sử dụng.</string>
    <string name="dialog_cancel">HỦY</string>
    <string name="dialog_ok">OK</string>
    <string name="drawer_reload_launcher">Tải lại launcher</string>
    <string name="drawer_privacy_policy">Chính Sách Bảo Mật</string>
    <string name="drawer_user_guide">Hướng dẫn sử dụng</string>
    <string name="drawer_website">Trang web</string>
    <string name="drawer_about_us">Về chúng tôi</string>
    <string name="drawer_reload_done">Đã tải lại launcher.</string>
    <string name="launcher_installed_apps_count_a11y">Installed launchable apps: %1$d</string>
    <string name="launcher_default_already">iOS Style Launcher đã là trình khởi chạy mặc định.</string>
    <string name="launcher_default_prompt_failed">Không mở được màn chọn launcher mặc định.</string>
    <string name="launcher_uninstall_failed">Kh&#244;ng th&#7875; g&#7905; c&#224;i &#273;&#7863;t &#7913;ng d&#7909;ng n&#224;y.</string>
    <string name="launcher_uninstall_success">&#272;&#227; g&#7905; c&#224;i &#273;&#7863;t &#7913;ng d&#7909;ng.</string>
    <string name="default_launcher_prompt_title">iOS Launcher</string>
    <string name="default_launcher_prompt_message">Đặt iOS Launcher là Trình khởi chạy mặc định</string>
    <string name="default_launcher_welcome_title">Chào mừng</string>
    <string name="default_launcher_welcome_subtitle">Hình nền và cài đặt</string>
    <string name="default_launcher_welcome_hint">Chạm và giữ nền để tùy chỉnh</string>
    <string name="launcher_search_hint">Tìm kiếm</string>
    <string name="launcher_home_ready">iOS Launcher đã sẵn sàng</string>
    <string name="launcher_drag_hint">Nhấn giữ biểu tượng để kéo thả</string>
    <string name="settings_make_default_launcher">Make Default Launcher</string>
    <string name="settings_select_app">Chọn ứng dụng</string>
    <string name="settings_no_apps_found">Không có ứng dụng nào.</string>
    <string name="settings_blur_enabled">Bật hiệu ứng mờ</string>
    <string name="settings_blur_message">Áp dụng hiệu ứng mờ khi mở thư mục, tìm kiếm và menu ứng dụng.</string>
    <string name="settings_blur_master">Đế mờ</string>
    <string name="settings_blur_folder">Thư mục Blur</string>
    <string name="settings_blur_widget">Tiện ích Blur</string>
    <string name="settings_blur_search">Thanh tìm kiếm mờ</string>
    <string name="settings_animation_unlock">Mở khóa hoạt hình</string>
    <string name="settings_animation_open_close">Mở/Đóng Hoạt ảnh Ứng dụng</string>
    <string name="settings_animation_parallax_zoom">Hình ảnh động hình nền thị sai/thu phóng</string>
    <string name="settings_wallpaper_choose_image">Chọn ảnh từ máy</string>
    <string name="settings_wallpaper_system">Mở cài đặt hình nền hệ thống</string>
    <string name="settings_wallpaper_reset">Khôi phục hình nền mặc định</string>
    <string name="settings_wallpaper_applied">Đã áp dụng hình nền.</string>
    <string name="settings_wallpaper_reset_done">Đã khôi phục hình nền mặc định.</string>
    <string name="settings_wallpaper_preview">Wallpaper Preview</string>
    <string name="settings_live_wallpaper_failed">Không mở được màn ảnh động.</string>
    <string name="settings_notification_access_failed">Không mở được màn quyền thông báo.</string>
    <string name="settings_rename_hint">Tên ứng dụng</string>
    <string name="settings_rename_done">Đã đổi tên %1$s.</string>
    <string name="settings_change_icon_choose_image">Chọn ảnh làm biểu tượng</string>
    <string name="settings_change_icon_my_photo">ẢNH CỦA TÔI</string>
    <string name="settings_change_icon_crop_title">Ảnh của tôi</string>
    <string name="settings_change_icon_image_failed">Không mở được ảnh đã chọn.</string>
    <string name="settings_change_icon_reset">Khôi phục biểu tượng mặc định</string>
    <string name="settings_change_icon_done">Đã thay biểu tượng %1$s.</string>
    <string name="settings_change_icon_reset_done">Đã khôi phục biểu tượng %1$s.</string>
    <string name="settings_hide_app_confirm">Ẩn %1$s khỏi màn hình chính và thư viện ứng dụng?</string>
    <string name="settings_hide_app_done">Đã ẩn %1$s.</string>
    <string name="settings_hidden_apps_done">Đã cập nhật ứng dụng ẩn.</string>
    <string name="dialog_done">Xong</string>
    <string name="dialog_reset">Mặc định</string>
    <string name="dialog_hide">Ẩn</string>
    <string name="launcher_open_app_failed">Không mở được %1$s.</string>
    <string name="launcher_default_opening">Đang mở màn chọn launcher mặc định...</string>
    <string name="launcher_default_not_selected">Bạn chưa chọn iOS Style Launcher làm mặc định.</string>
    <string name="app_option_open">Mở ứng dụng</string>
    <string name="app_option_rename">Đổi tên</string>
    <string name="app_option_change_icon">Thay biểu tượng</string>
    <string name="app_option_hide">Ứng Dụng Ẩn</string>
    <string name="app_option_info">Thông tin ứng dụng</string>
    <string name="app_option_edit_home">Chỉnh sửa màn hình chính</string>
    <string name="app_option_delete">Xóa bỏ</string>
    <string name="app_option_coming_soon">%1$s sẽ được gắn logic ở bước tiếp theo.</string>
    <string name="launcher_search_cancel">Hủy</string>
    <string name="launcher_search_suggestions">GỢI Ý</string>
    <string name="layout_back_settings">&#8249; C&#224;i &#273;&#7863;t</string>
    <string name="layout_dark_mode">Ch&#7871; &#273;&#7897; t&#7889;i</string>
    <string name="layout_iphone8_style">iPhone 8 Style</string>
    <string name="layout_bottom_spacing">Th&#234;m kho&#7843;ng c&#225;ch d&#432;&#7899;i</string>
    <string name="layout_auto_arrange">T&#7921; &#273;&#7897;ng s&#7855;p x&#7871;p l&#7841;i &#7913;ng d&#7909;ng</string>
    <string name="layout_hide_navigation">&#7848;n thanh &#273;i&#7873;u h&#432;&#7899;ng tr&#234;n M&#224;n h&#236;nh ch&#237;nh</string>
    <string name="layout_icon_size">ICON SIZE</string>
    <string name="layout_home_grid">HOME SCREEN GRID</string>
    <string name="layout_grid_5x4_icon">&#9632;&#9632;&#9632;&#9632;&#10;&#9632;&#9632;&#9632;&#9632;&#10;&#9632;&#9632;&#9632;&#9632;&#10;&#9632;&#9632;&#9632;&#9632;&#10;&#9632;&#9632;&#9632;&#9632;</string>
    <string name="layout_grid_6x4_icon">&#9632;&#9632;&#9632;&#9632;&#10;&#9632;&#9632;&#9632;&#9632;&#10;&#9632;&#9632;&#9632;&#9632;&#10;&#9632;&#9632;&#9632;&#9632;&#10;&#9632;&#9632;&#9632;&#9632;&#10;&#9632;&#9632;&#9632;&#9632;</string>
    <string name="layout_grid_5x4">5x4</string>
    <string name="layout_grid_6x4">6x4</string>
    <string name="launcher_widget_edit">S&#7917;a</string>
    <string name="launcher_widget_add">+</string>
    <string name="launcher_widget_done">Xong</string>
    <string name="launcher_widget_location_title">C&#7845;p Ph&#233;p V&#7883; Tr&#237;</string>
    <string name="launcher_widget_location_message">Kh&#244;ng cho ph&#233;p v&#7883; TR&#205;, c&#7845;p ph&#233;p &#273;&#7875; nh&#7853;n &#273;&#432;&#7907;c th&#244;ng tin th&#7901;i ti&#7871;t.</string>
    <string name="launcher_widget_weather_location">C&#7847;u Gi&#7845;y</string>
    <string name="launcher_widget_weather_temperature">29&#176;</string>
    <string name="launcher_widget_weather_temperature_format">%1$d&#176;</string>
    <string name="launcher_widget_weather_condition">m&#226;y &#273;en u &#225;m</string>
    <string name="launcher_widget_weather_high_low">H:31&#176; L:25&#176;</string>
    <string name="launcher_widget_weather_high_low_format">H:%1$d&#176; L:%2$d&#176;</string>
    <string name="launcher_widget_weather_no_network">Kh&#244;ng c&#243; k&#7871;t n&#7889;i</string>
    <string name="launcher_widget_weather_loading">&#272;ang t&#7843;i...</string>
    <string name="weather_current_location">V&#7883; tr&#237; hi&#7879;n t&#7841;i</string>
    <string name="weather_location_unavailable">Kh&#244;ng l&#7845;y &#273;&#432;&#7907;c v&#7883; tr&#237;.</string>
    <string name="weather_refresh_failed">Kh&#244;ng l&#7845;y &#273;&#432;&#7907;c th&#244;ng tin th&#7901;i ti&#7871;t.</string>
    <string name="weather_settings_unit">&#272;&#417;n v&#7883;</string>
    <string name="weather_settings_unit_celsius">&#176;C</string>
    <string name="weather_settings_unit_fahrenheit">&#176;F</string>
    <string name="weather_settings_auto_refresh">T&#7921; &#273;&#7897;ng l&#224;m m&#7899;i</string>
    <string name="weather_settings_auto_refresh_hourly">M&#7895;i ti&#7871;ng</string>
    <string name="weather_settings_auto_refresh_3_hours">3 gi&#7901; m&#7897;t l&#7847;n</string>
    <string name="weather_settings_auto_refresh_6_hours">6 gi&#7901; m&#7897;t l&#7847;n</string>
    <string name="weather_settings_auto_refresh_9_hours">C&#7913; 9 gi&#7901; m&#7897;t l&#7847;n</string>
    <string name="weather_settings_auto_refresh_12_hours">12 gi&#7901; m&#7897;t l&#7847;n</string>
</resources>