<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_feature_download_dialog"
    android:orientation="vertical"
    android:paddingStart="26dp"
    android:paddingTop="26dp"
    android:paddingEnd="26dp"
    android:paddingBottom="18dp">

    <TextView
        android:id="@+id/downloadTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feature_download_title"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/downloadMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:textColor="#424242"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/downloadPreview"
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="18dp"
        android:gravity="end|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/dialog_cancel"
            android:textColor="#00A6B5"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/okButton"
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/dialog_ok"
            android:textColor="#00A6B5"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
